; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_objects.c_vlclua_push_vlc_object.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_objects.c_vlclua_push_vlc_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"vlc_object\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"none of your business\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"__metatable\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"__gc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32 (i32*)*)* @vlclua_push_vlc_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_push_vlc_object(i32* %0, i32* %1, i32 (i32*)* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i32*)*, align 8
  %7 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 (i32*)* %2, i32 (i32*)** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @lua_newuserdata(i32* %8, i32 8)
  %10 = inttoptr i64 %9 to i32**
  store i32** %10, i32*** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32**, i32*** %7, align 8
  store i32* %11, i32** %12, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @luaL_newmetatable(i32* %13, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %30

16:                                               ; preds = %3
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @lua_pushliteral(i32* %17, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @lua_setfield(i32* %19, i32 -2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %21 = load i32 (i32*)*, i32 (i32*)** %6, align 8
  %22 = icmp ne i32 (i32*)* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %16
  %24 = load i32*, i32** %4, align 8
  %25 = load i32 (i32*)*, i32 (i32*)** %6, align 8
  %26 = call i32 @lua_pushcfunction(i32* %24, i32 (i32*)* %25)
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @lua_setfield(i32* %27, i32 -2, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  br label %29

29:                                               ; preds = %23, %16
  br label %30

30:                                               ; preds = %29, %3
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @lua_setmetatable(i32* %31, i32 -2)
  ret i32 1
}

declare dso_local i64 @lua_newuserdata(i32*, i32) #1

declare dso_local i64 @luaL_newmetatable(i32*, i8*) #1

declare dso_local i32 @lua_pushliteral(i32*, i8*) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32 (i32*)*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
